# ferric

./: .browserslistrc  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  entry.0bd5aed9.js  entry.0bd5aed9.js.map  entry.1182d96e.js  entry.1182d96e.js.map  entry.1798a9ec.js  entry.1798a9ec.js.map  entry.24e16ffe.js  entry.24e16ffe.js.map  entry.25ab3038.js  entry.25ab3038.js.map  entry.2a0e6ef4.js  entry.2a0e6ef4.js.map  entry.3110920e.js  entry.3110920e.js.map  entry.35405c04.js  entry.35405c04.js.map  entry.391fcca3.js  entry.391fcca3.js.map  entry.3ad55891.js  entry.3ad55891.js.map  entry.400917e8.js  entry.400917e8.js.map  entry.40aa0d7d.js  entry.40aa0d7d.js.map  entry.43a6d5bb.js  entry.43a6d5bb.js.map  entry.462a347c.js  entry.462a347c.js.map  entry.51f87ede.js  entry.51f87ede.js.map  entry.56cc0aa1.js  entry.56cc0aa1.js.map  entry.5711ef05.js  entry.5711ef05.js.map  entry.608ebb69.js  (+147 more)
.github/: dependabot.yml
src/: entry.ts  index.html  lib.rs  style.css
