[package]
name = "ferric"
version = "1.0.0"
description = "Rusty physics"
repository = "git@github.com:mysterycommand/ferric.git"
authors = ["Matt Hayes <matt@mysterycommand.com>"]
license = "(MIT OR Apache-2.0)"
categories = ["wasm", "physics"]
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "0.1.7"
wasm-bindgen = "0.2.40"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however. Also as of wee_alloc v0.4.2, does not yet work on stable
# (tested with rust v1.31.1).
wee_alloc = { version = "0.4.3", optional = true }

[dependencies.web-sys]
version = "0.3.17"
features = [
  'console',
]

[features]
default = ["console_error_panic_hook"]

