[package]
name = "ferric"
version = "1.0.0"
description = "Rusty physics"
repository = "git@github.com:mysterycommand/ferric.git"
authors = ["Matt Hayes <matt@mysterycommand.com>"]
license = "(MIT OR Apache-2.0)"
categories = ["wasm", "physics"]
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
wasm-bindgen = "0.2.45"
web-sys = { version = "0.3.22", features = [ "console", "CanvasRenderingContext2d" ] }
wee_alloc = { version = "0.4.4", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2.45"

[profile.release]
# optimize for size
# @see: https://doc.rust-lang.org/cargo/reference/manifest.html#the-profile-sections
opt-level = "s"
